--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <label for="message" class="message mb-3">Pesan</label>
                 <textarea class="form-control" id="message" rows="3"></textarea>
               </div>
-              <button type="submit" class="btn btn-primary">Kirim</button>
+              <button type="submit" class="btn btn-success">Kirim</button>
             </form>
           </div>
         </div>
