ubah typo error

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="card">
               <img src="img/galery/2.jpg" class="card-img-top" alt="Photo 2" />
               <div class="card-body">
-                <p class="card-text">Mambesak nama grup kesenian Papua yang sangat populer di Papua, karya mereka begitu digandrungi baik oleh kamu muda maupun orang tua.</p>
+                <p class="card-text">Mambesak nama grup kesenian Papua yang sangat populer di Papua, karya mereka begitu digandrungi baik oleh kaum muda maupun khalayak umum.</p>
               </div>
             </div>
           </div>
