--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="col-md-6">
             <p>
               CV FOYMOY JAYA CEMERLANG (FJC) MERUPAKAN PERUSAHAAN KOMANDITER YANG BARU DIDIRAKAN PADA TAHUN 2023. FOKUS USAHA KAMI ADALAH PADA BIDANG PENGADAAN BARANG, ALAT TULIS KANTOR, PERALATAN PERKANTORAN, PERANGKAT KOMPUTER DAN
-              KELENGKAPANNYA, PERALATAN ELEKTRONIK, PENGADAAN SERAGAM/KAOS UNTUK KEGIATAN ATAU UNTUK KANTOR, PERALATAN OLAHRAGA, JERSEY OLAHRAGA. KAMI MENCARI PATNER-PATNER TERBAIK YANG KAMI PERJAYA UNTUK MEMBERIKAN KUALITAN DALAM PRODUK
+              KELENGKAPANNYA, PERALATAN ELEKTRONIK, PENGADAAN SERAGAM/KAOS UNTUK KEGIATAN ATAU UNTUK KANTOR, PERALATAN OLAHRAGA, JERSEY OLAHRAGA. KAMI MENCARI PATNER-PATNER TERBAIK YANG KAMI PERCAYA UNTUK MEMBERIKAN KUALITAN DALAM PRODUK
               DAN LAYANAN. FJC HADIR MENAWARKAN KEPERCAYAAN DAN KENYAMANAN KEPADA SETIAP KLIEN KAMI.
             </p>
           </div>
