--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
       gsap.to(".jumbotron p", { duration: 3, Text: "Na bhe ya emale, na bhe ya memale.", ease: "back" });
     </script>
 
-    //script menangkap form sumber https://github.com/jamiewilson/form-to-google-sheets
+    <!-- script menangkap form sumber https://github.com/jamiewilson/form-to-google-sheets -->
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxkXJ7_L2vgZ9xlvfrjEwJsCfSZYYHkB_sOcnXhx-jxfFLOvxE4MoexGZq1TF83poBW/exec";
       const form = document.forms["submit-to-google-sheet"];
