--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
           <div class="col-md-6">
             <p>
               CV FOYMOY JAYA CEMERLANG (FJC) MERUPAKAN PERUSAHAAN KOMANDITER YANG BARU DIDIRAKAN PADA TAHUN 2023. FOKUS USAHA KAMI ADALAH PADA BIDANG PENGADAAN BARANG, ALAT TULIS KANTOR, PERALATAN PERKANTORAN, PERANGKAT KOMPUTER DAN
-              KELENGKAPANNYA, PERALATAN ELEKTRONIK, PENGADAAN SERAGAM/KAOS UNTUK KEGIATAN ATAU UNTUK KANTOR, PERALATAN OLAHRAGA, JERSEY OLAHRAGA. KAMI MENCARI PATNER-PATNER TERBAIK YANG KAMI PERCAYA UNTUK MEMBERIKAN KUALITAN DALAM PRODUK
+              KELENGKAPANNYA, PERALATAN ELEKTRONIK, PENGADAAN SERAGAM/KAOS UNTUK KEGIATAN ATAU UNTUK KANTOR, PERALATAN OLAHRAGA, JERSEY OLAHRAGA. KAMI MENCARI PATNER-PATNER TERBAIK YANG KAMI PERCAYA UNTUK MEMBERIKAN KUALITAS DALAM PRODUK
               DAN LAYANAN. FJC HADIR MENAWARKAN KEPERCAYAAN DAN KENYAMANAN KEPADA SETIAP KLIEN KAMI.
             </p>
           </div>
           <div class="col-md-6">
             <p>
-              MOTO KAMI “NA BHE YA EMALE, NA BHE YA MEMALE” MERUPAKAN SEBUAH UNGKAPAN DALAM BAHASA DAERAH SENTANI, PAPUA YANG BERMAKNA PANTANG MEMBAWA MALU. MENJAGA KEPERCAYAAN DARI KLIEN MERUPAKAN SEBUAH KEHARUSAN DALAM PELAYANAN KAMI.
+              MOTO KAMI “NA BHE YA EMALE, NA BHE YA MEMALE” MERUPAKAN SEBUAH UNGKAPAN DALAM BAHASA DAERAH SENTANI, PAPUA YANG BERMAKNA TIDAK MEMBAWA MALU. MENJAGA KEPERCAYAAN DARI KLIEN MERUPAKAN SEBUAH KEHARUSAN DALAM PELAYANAN KAMI.
             </p>
           </div>
         </div>
